# rpi_scrcpy

./: CMakeLists.txt  README.md  config.h  decoder.c  main.c  rpi_h264.h  scrcpy.c  server.c  stream.c
sys/unix/: process.c
trait/: frame_sink.h  packet_sink.h
util/: buffer_util.h  cbuf.h  log.h  net.c  net.h  process.h  queue.h  str_util.h  thread.h
